# activable.cloud

./: .dockerignore  .env.local.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  LICENSES.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  e2e-adversarial.yml
260524-adversarial-scenario-execution/: phase-01-floci-seed-scripts.md  phase-02-pipeline-ingestion-run.md  phase-03-scenario-1-cf-trap.md  phase-04-scenario-2-oidc-drift.md  phase-05-scenario-3-s3-orgid.md  phase-06-scenario-4-kms-grant.md  phase-07-scenario-5-full-chain.md  phase-08-results-report-teardown.md  plan.md
bindings/: README.md
bindings/activable/: activable.go
bindings/activable_ffi/: activable_ffi.go  activable_ffi.h  cgo.go  stubs.go  stubs_test.go
crates/activable-ffi/: Cargo.toml  build.rs
crates/activable-ffi/src/: activable.udl  error.rs  lib.rs  query_surface.rs  runtime.rs  write_surface.rs
crates/activable-ffi/tests/: ffi_smoke.rs
crates/activable-graph/: Cargo.toml
crates/activable-graph/src/: client.rs  error.rs  known_labels.rs  lib.rs  loader.rs  pool.rs  query_builder.rs  types.rs
crates/activable-graph/tests/: agtype_roundtrip.rs  agtype_scalar_test.rs  bench_regression_test.rs  bench_test.rs  edge_persistence_test.rs  graph_client_integration_test.rs  idempotency_test.rs  integration.rs  walk_edges_multi_type_test.rs
crates/activable-graphql/: Cargo.toml
crates/activable-graphql/src/: error.rs  graph_adapter.rs  graph_client_adapter.rs  main.rs  schema.rs  telemetry.rs  types.rs
crates/activable-graphql/src/resolvers/: account_risks.rs  federation_risks.rs  health.rs  ingest.rs  key_management_risks.rs  mod.rs  node.rs  path.rs  policy_helpers.rs  resource_policy_risks.rs  risk.rs  subgraph.rs  traversal.rs
crates/activable-graphql/src/types/: mod.rs  risk.rs
crates/activable-graphql/tests/: e2e_adversarial.rs  e2e_pipeline.rs  ingest_resolver_test.rs  key_management_risks_test.rs  resource_policy_risks_test.rs  schema_introspection_test.rs
crates/activable-iam-engine/: Cargo.toml
crates/activable-iam-eval/: Cargo.toml
crates/activable-iam-eval/src/: lib.rs
crates/activable-ingest/: Cargo.toml
crates/activable-ingest-iam/: Cargo.toml
crates/activable-ingest-iam/config/: dangerous-actions.yaml
crates/activable-ingest-iam/src/: abac.rs  action_matcher.rs  boundary_evaluator.rs  cloudtrail.rs  condition_evaluator.rs  dangerous_actions.rs  deny_engine.rs  effective_permissions.rs  error.rs  escalation_derivation.rs  lib.rs  phase_04_tests.rs  policy_parser.rs  resource_matcher.rs  resource_policy_parser.rs  scp_evaluator.rs  session_policy.rs  tests.rs
crates/activable-ingest-iam/tests/: adversarial_e2e.rs  adversarial_scenarios.rs  federation_tests.rs  iam_risk_integration.rs  parliament_agreement.rs  policy_drift_integration.rs
crates/activable-ingest/src/: cloud_control.rs  config.rs  error.rs  executor.rs  handler.rs  lib.rs  native_fallback.rs  relationship.rs  resource_registry.rs  runtime.rs
crates/activable-ingest/src/config/: relationships.yaml  resource_types.yaml
crates/activable-ingest/src/native/: access_edges.rs  ec2.rs  iam.rs  kms.rs  lambda.rs  mod.rs  permissions.rs  principal.rs  resource_policy.rs  s3.rs  secretsmanager.rs  sentinel.rs
crates/activable-ingest/tests/: account_handler_test.rs  live_ingest_integration.rs  managed_policy_ingest_test.rs  multi_account_integration.rs  permission_acts_on_secret_test.rs
crates/activable-risk/: Cargo.toml
crates/activable-risk/config/: risk-weights.yaml
crates/activable-risk/config/escalation-paths/bundled/: abac-001.yaml  cascade-multi-finding-001.yaml  cf-passrole-001.yaml  drift-001.yaml  ec2-001.yaml  iam-001.yaml  iam-002.yaml  iam-003.yaml  iam-update-trust-001.yaml  kms-grant-001.yaml  lambda-001.yaml  s3-org-id-001.yaml
crates/activable-risk/src/: batch_runner.rs  cascade.rs  config.rs  finding.rs  fuzzing.rs  lib.rs  rule_engine.rs  rule_loader.rs  scorer.rs  service_catalog.rs  stale_checker.rs  types.rs
crates/activable-risk/src/enumeration/: iterative_scorer.rs  mod.rs  principal_enumerator.rs
crates/activable-risk/src/services/: account_risk_service.rs  federation_risk_service.rs  key_management_risk_service.rs  mod.rs  resource_policy_risk_service.rs
crates/activable-risk/src/signals/: blast_radius.rs  cross_account_hops.rs  dangerous_action_count.rs  mod.rs  path_to_admin.rs  permission_surface.rs
crates/activable-risk/tests/: cloudgoat_regression.rs  enumeration_integration.rs  iam_risk_coverage_validation.rs  integration_test.rs  performance_benchmarks.rs  pipeline_regression.rs  scoring_determinism.rs  signal_weight_completeness.rs
crates/activable-scheduler/: Cargo.toml  README.md
crates/activable-scheduler/src/: handler.rs  lib.rs  model.rs  reaper.rs  registry.rs  scheduler.rs  schema.rs  store.rs  worker.rs
crates/activable-scheduler/tests/: reaper_test.rs  reusability_test.rs  store_test.rs  worker_test.rs
crates/activable-schema/: Cargo.toml
crates/activable-schema/src/: arn.rs  edge_constraint.rs  labels.rs  lib.rs  properties.rs  serde_agtype.rs
crates/activable-schema/tests/: labels_compile_test.rs  version_smoke.rs
deploy/docker/: Dockerfile  Dockerfile.cached  Dockerfile.fast
deploy/gateway/: README.md  gateway.yaml  gen-local-cert.sh  install-envoy-gateway.sh  referencegrant.yaml
deploy/k8s/: floci-seed-job.yaml  seed-adversarial-job.yaml
deploy/scripts/: seed-adversarial.sh  seed-floci-adversarial.sh
docs/: code-standards.md  debugging.md  deployment-guide.md  developer-guide-add-query.md  developer-guide-add-service.md  onboarding.md  platform.md  profiling.md  system-architecture.md
scripts/: check-dco.sh  check-no-plan-taxonomy.sh  size-check.sh  test-ffi-stability.sh
spike/graph-backend/: Cargo.toml  README.md  results.md
spike/graph-backend/queries/: 01-one-hop.cypher  02-three-hop.cypher  03-six-hop-varlen.cypher  04-shortest-path.cypher  05-subgraph.cypher
spike/graph-backend/src/: bench.rs  generate_synthetic_graph.rs  load_pg_age.rs  main.rs
(+160 files in other folders)
