[workspace]
resolver = "2"
members = [
    "crates/activable-schema",
    "crates/activable-graph",
    "crates/activable-ingest-iam",
    "crates/activable-graphql",
    "crates/activable-ingest",
    "crates/activable-risk",
]
exclude = [
    "spike/graph-backend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Thinh Nguyen <ducthinh993@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/activable-cloud/activable.cloud"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Fast iteration profile: opt-level 3 but no LTO, parallel codegen.
# ~3x faster builds than release, ~10% slower runtime. Use for E2E/dev.
# Build with: cargo build --profile release-fast -p activable-graphql
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
