[package]
name = "activable-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "UniFFI surface for Rust↔Go bindings."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uniffi = { version = "0.31.0", features = ["build", "cli"] }
activable-schema = { path = "../activable-schema" }
activable-graph = { path = "../activable-graph" }
activable-iam-eval = { path = "../activable-iam-eval" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
deadpool-postgres = "0.14"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[lints]
workspace = true

[[test]]
name = "ffi_smoke"
path = "tests/ffi_smoke.rs"
