[package]
name = "activable-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PostgreSQL + Apache AGE driver and Cypher query helpers."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
activable-schema = { path = "../activable-schema" }

[dev-dependencies]

[lints]
workspace = true
