[package]
name = "activable-graphql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GraphQL API server for Activable using async-graphql and axum."

[[bin]]
name = "activable-graphql"
path = "src/main.rs"

[dependencies]
activable-schema = { path = "../activable-schema" }
activable-graph = { path = "../activable-graph" }
activable-ingest = { path = "../activable-ingest" }
activable-risk = { path = "../activable-risk" }
activable-ingest-iam = { path = "../activable-ingest-iam" }
activable-scheduler = { path = "../activable-scheduler" }
async-graphql = "=8.0.0-rc.5"
async-graphql-axum = "=8.0.0-rc.5"
async-trait = "0.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
futures = "0.3"
anyhow = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
aws-config = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-postgres = { version = "0.7" }

[lints]
workspace = true
