[package]
name = "activable-iam-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IAM policy evaluator (Parliament port — Slice B stub)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
