[package]
name = "activable-ingest-iam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IAM policy evaluator — Parliament-equivalent. Deep policy parsing, Deny evaluation, permission boundaries."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
activable-schema = { path = "../activable-schema" }

[lints]
workspace = true
