[package]
name = "activable-ingest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AWS Cloud Control API + native SDK dual-mode ingester for activable-graph."

[dependencies]
activable-graph = { path = "../activable-graph" }
activable-schema = { path = "../activable-schema" }
aws-sdk-cloudcontrol = "1"
aws-sdk-iam = "1"
aws-sdk-ec2 = "1"
aws-sdk-s3 = "1"
aws-sdk-lambda = "1"
aws-sdk-sts = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
futures = "0.3"
thiserror = "1"
deadpool-postgres = "0.14"
async-trait = "0.1"
urlencoding = "2"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
