[package]
name = "activable-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Node and edge types for the activable cloud attack graph."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-postgres = "0.7"

[lints]
workspace = true
