[package]
name = "graph-backend-spike"
version = "0.1.0"
edition = "2021"
authors = ["Thinh Nguyen <ducthinh993@gmail.com>"]
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
time = { version = "0.3", features = ["serde"] }
tempfile = "3"
postgres = "0.19"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
kuzu = []

[[bin]]
name = "spike"
path = "src/main.rs"
